--- a/AUTHORS
+++ b/AUTHORS
@@ -1,16 +1,19 @@
 ## Programmers
 
 - Sébastien Boisvert
+- Maxime Déraspe (Surveyor)
 
 ## Designers
 
 - Sébastien Boisvert
 - Élénie Godzaridis (some design insights for parallel programming)
 - Frédéric Raymond (colored graph algorithms)
+- Maxime Déraspe
 
 ## Code reviewers
 
 - Élénie Godzaridis
+- Sébastien Boisvert
 
 ## Mentors
 
